# news_feed_analysis

./: .gitignore  detailed_plan.md  docker-compose.yml  initial_plan.md  to_run.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: articles.py  feeds.py
backend/app/core/: config.py  database.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/worker/: celery_app.py  nlp_engine.py  tasks.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: index.js
frontend/src/components/: ArticleList.jsx  Stats.jsx
frontend/src/pages/: Dashboard.jsx  Feeds.jsx
